材料力学つづき

--- a/kougaku4riki_note_v001.tex
+++ b/kougaku4riki_note_v001.tex
@@ -89,7 +89,7 @@ ver001: 2020-03-21 章立て、材料力学はじめた
 弾性変形 
 
 ヤング率(Young's Module)$E$：
-\[E = \frac{\sigma}{\varepsilon}\]
+\[E = \frac{\sigma}{\varepsilon}\ \ \left(, \rightarrow\ \  \varepsilon = \frac{\sigma}{E} \right)\]
 ポアソン比(Poisson's Ratio)$\nu$：
 \[\nu = \frac{-\varepsilon_x}{\varepsilon_y}\]
 ひずみエネルギー$U^e$：
@@ -103,6 +103,33 @@ ver001: 2020-03-21 章立て、材料力学はじめた
 弾性ひずみ$\varepsilon_e$
 
 全ひずみ：$\varepsilon = \varepsilon_p + \varepsilon_e$
+
+\subsection{脆性材料と延性材料}
+脆性材料：亀裂が簡単に進み、簡単に破断される。例：鋳鉄、コンクリ
+
+延性材料：亀裂が生じた場合でも簡単には破断されない。例：アルミニウム合金、ステンレス鋼
+
+一般に鉄鋼材料のヤング率は$E\sim200\ \mathrm{GPa}$程度、降伏応力は$\sigma_y \sim 300\ \mathrm{MPa}$ 程度。
+
+脆性材料が延性材料よりも高い引っ張り強さを表すかもしれない。しかし脆性材料の引っ張り強さ($\sigma_B$)の材料ごとのバラつきや事故の可能性の観点から、構造物には延性材料が用いられることが多い。
+
+\section{トラス構造}
+複数の棒が回転自由の継ぎ手によって連結されている構造を\textbf{トラス構造}(Truss structure)とよぶ。
+
+\subsection{静定問題と不静定問題}
+静定問題　：各部材が\textbf{独立}であるので、力のつり合いなどから決定できる。
+
+不静定問題：各部材に関連があり、独立でない。
+\newline
+
+天井に接続された二つ（以上）の棒の下端を別の材料で束縛するような場合、不静定問題となる。
+
+微小変形の立場をとり、変形が円弧上ではなく垂線上にあると近似すれば、変位先の点は比較的容易に決定できる。
+\newline
+
+[練習問題の題材]
+組み合わせ棒(前述)、自重を受ける棒、三角トラスの各棒の応力および変位
+
 % -----------------------------------------------------------
 
 \chapter{機械力学 Dynamics of Machinary}
