--- a/kougaku4riki_note_v001.tex
+++ b/kougaku4riki_note_v001.tex
@@ -25,7 +25,7 @@
 \addtolength{\textheight}{\topskip}
 \setlength{\voffset}{-0.6in}
 %
-\title{工学4力　まとめノート(未完) \\ \small{\url{ver001}}}
+\title{工学4力　まとめノート(未完) \\ \small{\url{ver002}}}
 \author{YuseiB  \\ \url{@saka216saka}}
 \date{\today}
 \begin{document}
@@ -39,11 +39,15 @@
 進捗管理
 
 ver001: 2020-03-21 章立て、材料力学はじめた
+
+ver002: 2020-03-29 ざいりきのなかの章立て、熱応力～ねじり
 %---------------
 
 \chapter{材料力学 Material Mechanics}
 
 構造物の各部分に生じる内力や変形を解析することを目的とする分野。
+
+材料力学は東京大学工学部機械工学科材料力学スタッフ一同 様によるPDFファイル\url{http://www.mech.kogakuin.ac.jp/ms/feature/about_4riki.html} を参考にしました。
 
 \section{応力と歪み1}
 \subsection{応力}
@@ -130,8 +134,131 @@ ver001: 2020-03-21 章立て、材料力学はじめた
 [練習問題の題材]
 組み合わせ棒(前述)、自重を受ける棒、三角トラスの各棒の応力および変位
 
+
+\section{熱応力}
+材質の温度を上げると、一般に材質は膨張する。長さ$l$の材質を$\Delta T$ だけ温度を上昇させる。膨張は温度変化に比例するとして、
+
+線膨張定数$\alpha$、熱ひずみ$\varepsilon_{th}$；
+\[\Delta l = \alpha\ \Delta T\ l = \varepsilon_{th} l\]
+
+実際に観測するひずみ$\varepsilon_{tot}$は弾性ひずみと熱ひずみの和：
+\[\varepsilon_{tot} = \varepsilon_{el} + \varepsilon_{th}\]
+
+熱応力：長さ$l$の材質の両端が壁に固定されているなど、温度変化による物質の変形を妨げる（束縛する）光速がある場合に発生する応力のことをさす。
+
+[具体例]
+魔法瓶の内側に熱水をいれた場合とか：応力の大きさによっては亀裂が生じたり破断する。
+
+\section{梁の曲げ　静定問題}
+
+トラス構造では回転自由の継ぎ手を考えた。ここでは壁に回転・移動固定した継ぎ手を考える。棒が短ければ剪断変形をうける（前のセクションを参考に）。棒が長くなるとモーメントは棒の長さ$l$について線形に増加する。そのため、長くなるほどにモーメントが支配的になる。
+
+モーメント：$Fl$
+
+片持ち梁（カンチレバー(Cantilever)）
+
+梁の内部を考察するためには、梁の内力に相当する断面のせんだん力と曲げモーメントを求める必要がある。
+［正負の定義について］ここでは、剪断力は材質を時計回りに回すときに $F>0$ とし、曲げモーメントは材質を下に凸にする変形（上方は収縮、下方は伸びる）に $M>0$ とする。
+
+分布形状の図式には、剪断力図(SFD: Shearing force diagram)、曲げモーメント図(BMD: Bending moment diagram)が使われる。詳しくはテキストのいくつかの例示をみよ(p.48-)。
+
+\subsection{梁の曲げ応力}
+［仮定］（オイラーベルヌーイの仮定）
+
+1) 対称軸、対称面、軸面など
+
+2) 梁の横断面は平面を保ち軸線と直交する。
+\newline
+
+中立面の曲率半径を$\rho$、微小角を$\mathrm{d}\theta$とする。ひずみは
+\[\varepsilon_x = \frac{y}{\rho}\]
+となる。
+
+すなわち、上面では圧縮、下面では引っ張り、中立面ではゼロとなり、その間はリニアに分布する。
+
+断面一次モーメント；$\int_A y\ dA$
+
+断面一次モーメントがゼロになる位置として中立軸を求めることが出来る。
+
+断面二次モーメント；$I_z = \int_A y^2 dA$
+
+モーメントのつり合いを考えると、\[M = \int_A y\sigma_x dA = \frac{E}{\rho} \int_A y^2 dA = \frac{E}{\rho} I_z\]
+
+つまり、\[\frac{1}{\rho} = \frac{M}{EI_z}\]
+
+$EI_z$を曲げ剛性と呼び、曲げに対する曲がりにくさの指標となる。
+
+
+\subsection{断面二次モーメントの求め方}
+長方形断面のとき、幅$b$高さ$h$で図心をとると、
+\[ I_z = \int_A y^2 dA = \int_{-h/2}^{+h/2} y^2 b dA = \frac{bh^3}{12}\]
+
+すなわち、断面二次モーメント$I_z$は幅の1乗、高さの3乗に比例する。
+\newline
+
+便利な定理（１）平行軸定理
+\[I_z' = I_z + Ae^2 \]
+
+便利な定理（２）加算定理
+\[I = I_{z1} \pm I_{z2} \pm \hdots \]
+
+\subsection{梁のたわみ}
+
+外力によって梁をたわませる。y方向の変位を$\nu(x)$、$x$での接線のなす角を$\theta$、曲率半径を$\rho $とする。
+
+たわみ
+\[\frac{1}{\rho} = - \derivative{\theta}{s}\]
+
+簡単な計算を経て
+\[\frac{1}{\rho} = \frac{-\dderivative{\nu}{x}}{\left( 1 + (\derivative{\nu}{x} )^2 \right) {}^{\frac{3}{2}}} \sim -\dderivative{\nu}{x}\]
+
+先に求めた式と合わせて；
+\[たわみの基礎式　:　\dderivative{\nu}{x} = -\frac{M}{EI_z}\]
+これを\textbf{たわみの基礎式}という。
+
+積分して、たわみ角$\theta$；
+\[\theta = \derivative{\nu}{x} = -\int \frac{M}{EI_z} dx + c_1\]
+
+たわみ$\nu$；
+\[ \nu = \int \theta dx = - \int\int \frac{M}{EI_z} dxdx +c_1x +c_2\]
+
+
+これらの理論から手計算によって求めることが出来るが、実際には便覧を参照したり有限要素法によって求めることが多い。
+気を付けることは　1）扱う梁が梁理論の過程に沿ったものであるか（曲げ変形だけでなく剪断変形も考える、横断面の著しい変形を考える）　2)支持のしかたの境界条件が現実に沿っているか、壁固定で完全にたわみ角をゼロにすることは難しい。
+3)　表面、裏面のどちらが引っ張り、圧縮になっているかを確かめる。
+
+\section{ねじり}
+
+丸棒の端を固定し、他端に偶力を作用させる。棒は$\phi$だけ回転する。
+
+トルク：$T= WL$
+
+丸棒表面の平行四辺形を考えて、剪断の角度$\gamma$；
+\[ \gamma \sim \tan \gamma =\frac{r\phi}{l} = r\theta\]
+
+剪断応力は歪みに剪断弾性係数$G$をかける（詳しくは7章）。
+\[\tau = G \gamma = G r \theta\]
+
+
+丸軸は動力の伝達に使われることが多い；
+
+ねじりモーメントの大半は外周部で支えられる。強度を保ったまま軽量化を実現するための手法として、中空丸軸をつかうのは良い選択である。
+
+
+｛具体例の計算〕コイルバネ　軸方向に非パるときに剪断力とねじりモーメントが作用して、バネ定数とかもろもろを計算できる。
+
 % -----------------------------------------------------------
 
+
+
+
+\section{応力・ひずみテンソル　構成式}
+\section{座屈}
+\section{薄肉・厚肉　円筒殻・球殻}
+\section{エネルギー原理　不静定梁}
+\section{応力集中計数　応力拡大計数}
+\section{構造強度設計}
+\section{appendix}
 \chapter{機械力学 Dynamics of Machinary}
 機械の稼働時にかかわる問題についての分野。
 
